# vault

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.test  LICENSE  Makefile  README.md  RELEASE_v1.5.0.md  RELEASE_v1.5.1.md  SECURITY.md  docker-compose.test.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_request.md
.github/workflows/: python-ci.yaml
docs/: api-reference.md  architecture.md  capsule-chain-anchors.md  cli.md  deployment.md  diataxis-organization.md  encryption.md  fastapi.md  getting-started.md  index.md  knowledge-graph.md  lifecycle.md  llms-txt-and-ai-consumption.md  membrane.md  memory-layers.md  migration.md  multi-tenancy.md  plugins.md  rbac.md  security.md  source-document-frontmatter.md  streaming-and-telemetry.md  troubleshooting.md  trust-tiers.md
examples/: quickstart.py
src/qp_vault/: __init__.py  adversarial.py  config.py  enums.py  exceptions.py  models.py  protocols.py  provenance.py  rbac.py  streaming.py  telemetry.py  vault.py
src/qp_vault/audit/: capsule_auditor.py  log_auditor.py
src/qp_vault/cis/: __init__.py  innate_scan.py  pipeline.py  release_gate.py
src/qp_vault/cli/: main.py
src/qp_vault/core/: chunker.py  hasher.py  layer_manager.py  lifecycle_engine.py  resource_manager.py  search_engine.py
src/qp_vault/embeddings/: __init__.py  noop.py  openai.py  sentence.py
src/qp_vault/encryption/: __init__.py  aes_gcm.py  fips_kat.py  hybrid.py  ml_dsa.py  ml_kem.py  zeroize.py
src/qp_vault/graph/: __init__.py  detection.py  extraction.py  materialization.py  models.py  resolution.py  service.py  wikilinks.py
src/qp_vault/integrations/: fastapi_routes.py
src/qp_vault/integrity/: detector.py
src/qp_vault/membrane/: __init__.py  adaptive_scan.py  correlate.py  innate_scan.py  pipeline.py  release_gate.py  remember.py  sanitize.py  surveil.py
src/qp_vault/membrane/screeners/: __init__.py  (+1 more)
src/qp_vault/plugins/: __init__.py  decorators.py  registry.py
src/qp_vault/processing/: docling_parser.py  text_parser.py  transcript_parser.py
src/qp_vault/storage/: grep_utils.py  postgres.py  sqlite.py
tests/: conftest.py  test_100_percent.py  test_adaptive_scan.py  test_adversarial_persistence.py  test_chunker.py  test_cis.py  test_cis_edge_cases.py  test_cis_phase2.py  test_cis_pipeline.py  test_cli.py  test_cli_full.py  test_config.py  test_coverage_gaps.py  test_embeddings_e2e.py  test_encryption.py  test_fastapi_advanced.py  test_fastapi_routes.py  test_final_coverage.py  test_final_gaps.py  test_find_by_name.py  test_graph_capsule.py  test_graph_edge_cases.py  test_graph_extraction_errors.py  test_graph_intelligence.py  test_graph_materialization.py  test_graph_models.py  test_graph_security.py  test_graph_storage.py  test_grep.py  test_grep_utils.py  test_hasher.py  test_integration_v2.py  test_integrity_advanced.py  test_layers_and_health.py  test_lifecycle.py  test_log_auditor.py  test_membrane.py  test_membrane_phase2.py  test_membrane_pipeline.py  test_models.py  (+25 more)
